crates/ruff/tests/cli/snapshots/cli__format__odoo_xml_formatting-2.snap
---
source: crates/ruff/tests/cli/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--isolated"
    - ir_cron.xml
---
success: true
exit_code: 0
----- stdout -----
1 file reformatted

----- stderr -----
