crates/ruff/tests/cli/snapshots/cli__format__odoo_xml_formatting-3.snap
---
source: crates/ruff/tests/cli/format.rs
expression: "test.read_file(\"ir_cron.xml\")?"
---
<?xml version="1.0" encoding="utf-8"?>
<odoo>
    <record id="ir_cron_sync" model="ir.cron">
        <field name="code">model._cron_sync(force=True)</field>
    </record>
    <record id="ir_cron_indented" model="ir.cron">
        <field name="code">
            for partner in records.filtered(lambda p: p.credit &lt; 0):
                partner.write({"note": "negative"})
        </field>
    </record>
    <record id="action_write" model="ir.actions.server">
        <field name="state">object_write</field>
        <field name="code">records.unused( )</field>
    </record>
    <record id="action_code" model="ir.actions.server">
        <field name="code"><![CDATA[
if records and records[0].credit < 0:
    action = {"res_model": "res.partner"}
]]></field>
    </record>
</odoo>
